--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ guia-maker-de-impressao-3d.html
 guia-maker-de-impressao-3d.pdf
 guia-maker-de-impressao-3d.epub
 guia-maker-de-impressao-3d.mobi
+img
+img/*
